# copc-converter

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: chunking.rs  extra_bytes.rs  lib.rs  main.rs  node_store.rs  octree.rs  validate.rs  writer.rs
tests/: integration.rs
tests/data/: extra_bytes_mismatched.laz
